--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,5 +34,46 @@ header {
 }
 
 h1 {
+    color: #fff;
+    font-size: 240%;
+    font-weight: 300;
+    letter-spacing: 1px;
     margin: 0;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    word-spacing: 4px;
+}
+
+.btn:link, .btn:visited {
+    border-radius: 200px;
+    display: inline-block;
+    font-weight: 300;
+    margin-right: 15px;
+    padding: 10px 30px;
+    text-decoration: none;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+.btn-full:link, .btn-full:visited {
+    background-color: #e67e22;
+    border: 1px solid #e67e22;
+    color: #fff;
+}
+
+.btn-ghost:link, .btn-ghost:visited {
+    border: 1px solid #e67e22;
+    color: #e67e22;;
+}
+
+.btn:hover, btn:active {
+    background-color: #cf6d17;
+}
+
+.btn-full:link, .btn-full:visited {
+    border: 1px solid #cf6d17;
+}
+
+.btn-ghost:link, .btn-ghost:visited {
+    border: 1px solid #cf6d17;
+    color: #fff;
 }
