--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,17 +26,75 @@ html {
     margin: 0 auto;
 }
 
+section {
+    padding: 80px 0;
+}
+
+.box {
+    padding: 1%;
+}
+
 /* Headings */
+
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    text-transform: uppercase;
+}
 
 h1 {
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
     letter-spacing: 1px;
     margin: 0;
     margin-bottom: 20px;
-    text-transform: uppercase;
     word-spacing: 4px;
+}
+
+h2 {
+    font-size: 180%;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    text-align: center;
+    word-spacing: 2px;
+}
+
+h3 {
+    font-size: 110%;
+    margin-bottom: 15px;
+}
+
+/* CSS content example: horizontal line */
+h2:after {
+    background-color: #e67e22;
+    content: " ";
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+    height: 2px;
+    width: 100px;
+}
+
+/* Paragraphs */
+.long-copy {
+    line-height: 145%;
+    margin-left: 15%;
+    width: 75%;
+}
+
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
+/* Icons */
+
+.icon-big {
+    color: #e67e22;
+    display: block;
+    font-size: 350%;
+    margin-bottom: 10px;
 }
 
 /* Buttons */
