meals section: added images and basic styling

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -192,5 +192,27 @@ header {
     border-bottom: 2px solid #e67e22;
 }
 
+/* --------------------------------------------------------- */
+/* Meals */
+/* --------------------------------------------------------- */
 
+.meals-showcase {
+    list-style: none;
+    width: 100%;
+}
 
+.meals-showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+}
+
+.meal-photo {
+    margin: 0;
+    width: 100%;
+}
+
+.meal-photo img {
+    width: 100%;
+    height: auto;
+}
