--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -193,8 +193,20 @@ header {
 }
 
 /* --------------------------------------------------------- */
+/* Features */
+/* --------------------------------------------------------- */
+
+.section-features .long-copy {
+    margin-bottom: 30px;
+}
+
+/* --------------------------------------------------------- */
 /* Meals */
 /* --------------------------------------------------------- */
+
+.section-meals {
+    padding: 0;
+}
 
 .meals-showcase {
     list-style: none;
@@ -208,11 +220,21 @@ header {
 }
 
 .meal-photo {
+    background-color: #000;
     margin: 0;
+    overflow: hidden;
     width: 100%;
 }
 
 .meal-photo img {
-    width: 100%;
     height: auto;
+    opacity: 0.7;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+    width: 100%;
+}
+
+.meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.03);
 }
