--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,18 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {
+    zoom: 1;
+}
+
+.clearfix:after {
+    content: ".";
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
 /* --------------------------------------------------------- */
 /* Re-usable components */
 /* --------------------------------------------------------- */
@@ -144,6 +156,7 @@ h2:after {
 /* --------------------------------------------------------- */
 
 header {
+    background-attachment: fixed;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-position: center;
     background-size: cover;
@@ -204,7 +217,7 @@ header {
 /* Meals */
 /* --------------------------------------------------------- */
 
-.section-meals {
+.meals-section {
     padding: 0;
 }
 
@@ -237,4 +250,55 @@ header {
 .meal-photo img:hover {
     opacity: 1;
     transform: scale(1.03);
+}
+
+/* --------------------------------------------------------- */
+/* Steps */
+/* --------------------------------------------------------- */
+
+.section-steps {
+    background-color: #f4f4f4;
+}
+
+.steps-box:first-child {
+    margin-top: 30px;
+    padding-right: 3%;
+    text-align: right;
+}
+
+.steps-box:last-child {
+    margin-top: 70px;
+    padding-left: 3%;
+}
+
+.app-screen {
+    width: 40%;
+}
+
+.works-step {
+    margin-bottom: 50px;
+}
+
+.works-step:last-of-type {
+    margin-bottom: 80px;
+}
+
+.works-step div {
+    display: inline-block;
+    border: 2px solid #e67e22;
+    border-radius: 50%;
+    color: #e67e22;
+    height: 50px;
+    font-size: 150%;
+    float: left;
+    margin-right: 25px;
+    padding: 5px;
+    text-align: center;
+    width: 50px;
+}
+
+.btn-app img {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
 }
