--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,12 +174,6 @@ a:active {
     border: 1px solid #cf6d17;
 }
 
-.btn-ghost:link,
-.btn-ghost:visited {
-    border: 1px solid #cf6d17;
-    color: #fff;
-}
-
 /* --------------------------------------------------------- */
 /* Header */
 /* --------------------------------------------------------- */
@@ -349,4 +343,45 @@ header {
 
 .city-feature {
     margin-bottom: 5px;
+}
+
+/* --------------------------------------------------------- */
+/* Testimonials */
+/* --------------------------------------------------------- */
+
+.section-testimonials {
+    background-attachment: fixed;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+}
+
+blockquote {
+    font-style: italic;
+    line-height: 145%;
+    margin-top: 40px;
+    padding: 2%;
+    position: relative;
+}
+
+cite {
+    display: block;
+    font-size: 90%;
+    margin-top: 25px;
+}
+
+blockquote:before {
+    content: "\201c";
+    display: block;
+    left: -3px;
+    font-size: 500%;
+    position: absolute;
+    top: -5px;
+}
+
+cite img {
+    border-radius: 50%;
+    height: 45px;
+    margin-right: 10px;
+    vertical-align: middle;
 }
