--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -385,3 +385,59 @@ cite img {
     margin-right: 10px;
     vertical-align: middle;
 }
+
+/* --------------------------------------------------------- */
+/* Sign up */
+/* --------------------------------------------------------- */
+
+.section-plans {
+    background-color: #f4f4f4;
+}
+
+.plan-box {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 2px #efefef;
+    margin-left: 5px;
+    width: 90%;
+}
+
+.plan-box div {
+    border-bottom: 1px solid #e8e8e8;
+    padding: 15px;
+}
+
+.plan-box div:first-child {
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.plan-box div:last-child {
+    text-align: center;
+    border: 0;
+}
+
+.plan-price {
+    color: #e67e22;
+    font-weight: 100;
+    font-size: 300%;
+    margin-bottom: 10px;
+}
+
+.plan-price span {
+    font-weight: 300;
+    font-size: 30%;
+}
+
+.plan-price-meal {
+    font-size: 80%;
+}
+
+.plan-box ul {
+    list-style: none;
+}
+
+.plan-box ul li {
+    /*list-style: none;*/
+}
