--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -141,7 +141,8 @@ a:active {
 /* Buttons */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type="submit"] {
     border-radius: 200px;
     display: inline-block;
     font-weight: 300;
@@ -152,7 +153,8 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type="submit"] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -165,7 +167,9 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type="submit"]:hover,
+input[type="submit"]:active {
     background-color: #cf6d17;
 }
 
@@ -438,6 +442,33 @@ cite img {
     list-style: none;
 }
 
-.plan-box ul li {
-    /*list-style: none;*/
+/* --------------------------------------------------------- */
+/* Contact form */
+/* --------------------------------------------------------- */
+
+.contact-form {
+    margin: 0 auto;
+    width: 60%;
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 7px;
+    width: 100%;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type="checkbox"] {
+    margin: 10px 5px 10px 0px;
+}
+
+*:focus {
+    outline: none;
 }
