--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -472,3 +472,82 @@ input[type="checkbox"] {
 *:focus {
     outline: none;
 }
+
+/* --------------------------------------------------------- */
+/* Footer */
+/* --------------------------------------------------------- */
+
+footer {
+    background-color: #333;
+    font-size: 80%;
+    padding: 40px;
+}
+
+.footer-nav {
+    float: left;
+    list-style: none;
+}
+
+.social-links {
+    float: right;
+    list-style: none;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    border: 0;
+    color: #888;
+    text-decoration: none;
+    transition: color 0.2;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 160%;
+}
+
+.social-links li a ion-icon[name="logo-facebook"],
+.social-links li a ion-icon[name="logo-twitter"],
+.social-links li a ion-icon[name="logo-googleplus"],
+.social-links li a ion-icon[name="logo-instagram"] {
+    transition: color 0.2s;
+}
+
+.social-links li a ion-icon[name="logo-facebook"]:hover {
+    color: #3b5998;
+}
+
+.social-links li a ion-icon[name="logo-twitter"]:hover {
+    color: #00aced;
+}
+
+.social-links li a ion-icon[name="logo-googleplus"]:hover {
+    color: #dd4b39;
+}
+
+.social-links li a ion-icon[name="logo-instagram"]:hover {
+    color: #517fa4;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+}
