--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,12 +8,14 @@
     padding: 0;
 }
 
-html {
+html,
+body {
     background-color: #fff;
     color: #555;
     font-family: "Lato", "Aril", sans-serif;
     font-size: 20px;
     font-weight: 300;
+    overflow-x: hidden;
     text-rendering: optimizeLegibility;
 }
 
