--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,7 @@
 /* --------------------------------------------------------- */
 
 * {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -131,6 +132,8 @@ a:visited {
     color: #e67e22;
     padding-bottom: 1px;
     text-decoration: none;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
+    -o-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -151,6 +154,8 @@ input[type="submit"] {
     margin-right: 15px;
     padding: 10px 30px;
     text-decoration: none;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
+    -o-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -186,6 +191,9 @@ input[type="submit"]:active {
 
 header {
     background-attachment: fixed;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-position: center;
     background-size: cover;
@@ -196,6 +204,8 @@ header {
     left: 50%;
     position: absolute;
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 1140px;
 }
@@ -226,6 +236,8 @@ header {
     padding: 8px 0px;
     text-decoration: none;
     text-transform: uppercase;
+    -webkit-transition: border-bottom 0.2s;
+    -o-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
 
@@ -271,13 +283,21 @@ header {
 .meal-photo img {
     height: auto;
     opacity: 0.7;
+    -webkit-transform: scale(1.15);
+    -ms-transform: scale(1.15);
     transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
+    -o-transition: transform 0.5s, opacity 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
     width: 100%;
 }
 
 .meal-photo img:hover {
     opacity: 1;
+    -webkit-transform: scale(1.03);
+    -ms-transform: scale(1.03);
     transform: scale(1.03);
 }
 
@@ -357,6 +377,9 @@ header {
 
 .section-testimonials {
     background-attachment: fixed;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(img/back-customers.jpg);
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
@@ -403,6 +426,7 @@ cite img {
 .plan-box {
     background-color: #fff;
     border-radius: 5px;
+    -webkit-box-shadow: 0 2px 2px #efefef;
     box-shadow: 0 2px 2px #efefef;
     margin-left: 5px;
     width: 90%;
@@ -513,6 +537,8 @@ footer {
     border: 0;
     color: #888;
     text-decoration: none;
+    -webkit-transition: color 0.2;
+    -o-transition: color 0.2;
     transition: color 0.2;
 }
 
@@ -530,6 +556,8 @@ footer {
 .social-links li a ion-icon[name="logo-twitter"],
 .social-links li a ion-icon[name="logo-googleplus"],
 .social-links li a ion-icon[name="logo-instagram"] {
+    -webkit-transition: color 0.2s;
+    -o-transition: color 0.2s;
     transition: color 0.2s;
 }
 
