--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -217,6 +217,16 @@ header {
     width: auto;
 }
 
+.logo-black {
+    display: none;
+    float: left;
+    height: 50px;
+    margin: 5px 0;
+    width: auto;
+}
+
+/* Main navigation */
+
 .main-nav {
     float: right;
     list-style: none;
@@ -244,6 +254,35 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #e67e22;
+}
+
+/* Sticky navigation */
+.sticky {
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    color: #555;
+    padding: 16px 0px;
+}
+
+.sticky .logo {
+    display: none;
+}
+
+.sticky .logo-black {
+    display: block;
+}
+
+.sticky .main-nav {
+    margin-top: 18px;
 }
 
 /* --------------------------------------------------------- */
