making the navigation responsive

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -88,9 +88,47 @@
         width: 100%
     }
 
-    /* temporary, until we build another one with jQuery */
     .main-nav {
         display: none;
+    }
+
+    .mobile-nav-icon {
+        display: inline-block;
+    }
+
+    .main-nav {
+        float: left;
+        margin-top: 35px;
+        margin-left: 25px;
+    }
+
+    .main-nav li {
+        display: block;
+    }
+
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        border: 0;
+        display: block;
+        font-size: 100%;
+        padding: 10px 0;
+    }
+
+    .sticky .main-nav {
+        margin-top: 10px;
+    }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited {
+        padding: 10px 0px;
+    }
+
+    .sticky .mobile-nav-icon {
+        margin-top: 10px;
+    }
+
+    .sticky .mobile-nav-icon ion-icon {
+        color: #555;
     }
 
     h1 {
