--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -257,6 +257,7 @@ header {
 }
 
 /* Sticky navigation */
+
 .sticky {
     background-color: rgba(255, 255, 255, 0.98);
     box-shadow: 0 2px 2px #efefef;
@@ -283,6 +284,20 @@ header {
 
 .sticky .main-nav {
     margin-top: 18px;
+}
+
+/* Mobile navigation */
+
+.mobile-nav-icon {
+    cursor: pointer;
+    display: none;
+    float: right;
+    margin-top: 30px;
+}
+
+.mobile-nav-icon ion-icon {
+    color: #fff;
+    font-size: 200%;
 }
 
 /* --------------------------------------------------------- */
